# calendar-mirror

./: README.md
src/: CMakeLists.txt  app.qrc
src/src/: CMakeLists.txt  daylistmodel.cpp  daylistmodel.h  dialogevent.cpp  dialogevent.h  dialogevent.ui  dialogpreferences.cpp  dialogpreferences.h  dialogpreferences.ui  dialogwords.cpp  dialogwords.h  dialogwords.ui  dictionary.cpp  dictionary.h  event.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferences.h  speechengine.cpp  speechengine.h  wavcat.cpp
